--- a/package.json
+++ b/package.json
@@ -6,8 +6,24 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
+    "format": "prettier --write .",
+    "prepare": "husky install",
     "start": "react-native start",
     "test": "jest"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "**/*.{json,md,yml}": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "react": "18.3.1",
@@ -35,7 +51,9 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "husky": "^9.1.7",
     "jest": "^29.6.3",
+    "lint-staged": "^15.4.3",
     "prettier": "^3.4.2",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
