--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "@react-native/eslint-config": "0.76.6",
     "@react-native/metro-config": "^0.76.6",
     "@react-native/typescript-config": "0.76.6",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.2.6",
+    "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.57.1",
