--- a/package.json
+++ b/package.json
@@ -47,14 +47,17 @@
     "@react-native/eslint-config": "0.76.6",
     "@react-native/metro-config": "^0.76.6",
     "@react-native/typescript-config": "0.76.6",
+    "@tsconfig/react-native": "^3.0.5",
     "@types/jest": "^29.5.14",
     "@types/react": "^18.3.18",
     "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.1",
     "babel-jest": "^29.6.3",
+    "babel-plugin-root-import": "^6.6.0",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.2.3",
