--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     ]
   },
   "dependencies": {
+    "fast-text-encoding": "^1.0.6",
     "react": "18.3.1",
-    "react-native": "0.76.6"
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -55,6 +56,7 @@
     "husky": "^9.1.7",
     "jest": "^29.6.3",
     "lint-staged": "^15.4.3",
+    "msw": "^2.4.11",
     "prettier": "^3.4.2",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
