--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "lint-staged": "^15.4.3",
     "msw": "^2.4.11",
     "prettier": "^3.4.2",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
