chore: mock 데이터 및 환경변수 git ignore 추가 [SN-3]

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,13 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+# MSW
+src/mocks/assets
+src/mocks/data/*
+!src/mocks/data/types.ts
+
+
+# Environment variables
+.env
+.env.* 
