--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
     ]
   },
   "dependencies": {
-    "fast-text-encoding": "^1.0.6",
-    "react": "18.3.1",
-    "react-native-url-polyfill": "^2.0.0"
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "fast-text-encoding": "^1.0.6",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
+    "react-native-svg": "^15.11.1",
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
