--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "fast-text-encoding": "^1.0.6",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-keychain": "^9.2.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
