--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "fast-text-encoding": "^1.0.6",
+    "onnxruntime-react-native": "^1.20.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-fs": "^2.20.0",
     "react-native-keychain": "^9.2.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.1.0",
