--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
+    "react-native-size-matters": "^0.4.2",
     "react-native-svg": "^15.11.1",
     "react-native-url-polyfill": "^2.0.0",
     "zustand": "^5.0.3"
