--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.24.0",
     "react-native-keychain": "^9.2.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
     "react-native-size-matters": "^0.4.2",
