feat: 카카오 인증 URL 스킴 등록 추가 (CFBundleURLTypes 설정) [SN-82]

--- a/ios/nailian/Info.plist
+++ b/ios/nailian/Info.plist
@@ -47,12 +47,20 @@
 	<false/>
 	<key>KAKAO_APP_KEY</key>
 	<string>$(KAKAO_APP_KEY)</string>
-
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>kakao$(KAKAO_APP_KEY)</string>
 		<string>kakaolink</string>
 		<string>kakaokompassauth</string>
+	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>kakao$(KAKAO_APP_KEY)</string>
+			</array>
+		</dict>
 	</array>
 	<key>KeychainAccessGroups</key>
 	<array>
