--- a/ios/nailian/Info.plist
+++ b/ios/nailian/Info.plist
@@ -66,5 +66,17 @@
 	<array>
 		<string>$(AppIdentifierPrefix)com.nailian.app</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Pretendard-Black.ttf</string>
+		<string>Pretendard-Bold.ttf</string>
+		<string>Pretendard-ExtraBold.ttf</string>
+		<string>Pretendard-ExtraLight.ttf</string>
+		<string>Pretendard-Light.ttf</string>
+		<string>Pretendard-Medium.ttf</string>
+		<string>Pretendard-Regular.ttf</string>
+		<string>Pretendard-SemiBold.ttf</string>
+		<string>Pretendard-Thin.ttf</string>
+	</array>
 </dict>
 </plist>
