--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@react-native-seoul/kakao-login": "^5.4.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "@tanstack/react-query": "^5.69.0",
     "fast-text-encoding": "^1.0.6",
     "onnxruntime-react-native": "^1.20.1",
     "react": "18.3.1",
