fix: PR 설명 자동 작성 시 <br/> 태그 제거

--- a/.github/workflows/jira-to-pr.yml
+++ b/.github/workflows/jira-to-pr.yml
@@ -34,7 +34,7 @@ jobs:
               | if .type == "bulletList" then
                   .content[] | "- " + (.content[].content[].text // empty)
                 elif .type == "paragraph" then
-                  .content[] | if .type == "hardBreak" then "<br/>" else .text // empty end
+                  .content[] |.text // empty
                 else
                   empty
                 end
