--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-size-matters": "^0.4.2",
     "react-native-svg": "^15.11.1",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-view-shot": "^4.0.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
