--- a/.github/workflows/testflight.yml
+++ b/.github/workflows/testflight.yml
@@ -14,3 +14,25 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0 # 모든 태그·브랜치 히스토리 가져오기
+
+      # --- 브랜치 검사 ---
+      - name: Check if commit belongs to release/** branch
+        id: check_branch
+        run: |
+          BRANCH=$(git branch -r --contains $GITHUB_SHA | grep 'origin/release/' || echo "")
+          echo "branch=$BRANCH" >> $GITHUB_OUTPUT
+
+      - name: Skip if not a release branch
+        if: steps.check_branch.outputs.branch == ''
+        run: |
+          echo "This tag commit is not from a release branch. Exiting."
+          exit 1
+
+      # --- Xcode 워크어라운드 ---
+      - name: Disable FileSystemSynchronizedGroups (Xcode workaround)
+        run: defaults write com.apple.dt.Xcode IDEFileSystemSynchronizedGroupsEnabled -bool NO
+
+      - name: Set Xcode version
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '15.2'
