--- a/.github/workflows/testflight.yml
+++ b/.github/workflows/testflight.yml
@@ -120,3 +120,23 @@ jobs:
           username("${{ secrets.APPLE_ID }}")
           team_id("${{ secrets.TEAM_ID }}")
           EOL
+
+      # --- Fastlane 실행 ---
+      - name: Run Fastlane auto_release
+        working-directory: ios
+        env:
+          CI: true
+          BUNDLE_GEMFILE: ${{ github.workspace }}/ios/Gemfile
+          MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+          MATCH_GIT_URL: ${{ secrets.MATCH_GIT_URL }}
+          FASTLANE_USER: ${{ secrets.FASTLANE_USER }}
+          KEYCHAIN_NAME: build.keychain
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+          APP_STORE_CONNECT_API_KEY_KEY_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}
+          APP_STORE_CONNECT_API_KEY_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_API_ISSUER_ID }}
+          APP_STORE_CONNECT_API_KEY_KEY: ${{ secrets.APP_STORE_CONNECT_API_KEY_CONTENT }}
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          FASTLANE_ITC_TEAM_ID: ${{ secrets.FASTLANE_ITC_TEAM_ID }}
+          FASTLANE_TEAM_ID: ${{ secrets.FASTLANE_TEAM_ID }}
+          APP_IDENTIFIER: 'nailian.app'
+        run: bundle exec fastlane auto_release
