--- a/ios/nailian/Info.plist
+++ b/ios/nailian/Info.plist
@@ -80,5 +80,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>App Uses Non-Exempt Encryption</key>
+	<false/>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 </dict>
 </plist>
