--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-keychain": "^9.2.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.17.1",
@@ -47,6 +48,7 @@
     "react-native-svg": "^15.11.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-view-shot": "^4.0.3",
+    "uuid": "^11.1.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -66,6 +68,7 @@
     "@types/react": "^18.3.18",
     "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.1",
+    "@types/uuid": "^10.0.0",
     "babel-jest": "^29.6.3",
     "babel-plugin-root-import": "^6.6.0",
     "cross-env": "^7.0.3",
